fix: spacing before update icon in posts-list.
Former-commit-id: 7fa4abdc6b15baf90946aa72e983e8c8f66e07e4

--- a/themes/langurmonkey/static/css/main.css
+++ b/themes/langurmonkey/static/css/main.css
@@ -1165,6 +1165,7 @@ div.post-in-list i.last-update{
   opacity: 0.3;
   font-size: 0.6em;
   display: inline-block;
+  margin-left: 0.3em;
 }
 div.post-in-list a {
   text-decoration: none;
